# Mosaicraft

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  RELEASE_NOTES_v1.13.9.md  build_log.txt  third_party_versions.txt
.github/workflows/: ci.yml
compute/: CudaBackend.cu  CudaBackend.h  FeatureExtractorCuda.cu  FeatureExtractorCuda.h
core/: ApiHandlers.cpp  ApiHandlers.h  ApiJson.cpp  ApiJson.h  ApiMetadata.cpp  ApiMetadata.h  ApiRequestParser.cpp  ApiRequestParser.h  BatchProcessor.cpp  BatchProcessor.h  BigTiffWriter.h  BuildService.cpp  BuildService.h  ConsoleGuard.h  CudaStubs.cpp  Database.cpp  Database.h  DatabaseService.cpp  DatabaseService.h  DeepZoomWriter.h  FeatureExtractor.cpp  FeatureExtractor.h  FeatureIndex.h  FeaturePack.h  FeatureUtils.h  ImageCache.h  ImageNormalizer.cpp  ImageNormalizer.h  InspectService.cpp  InspectService.h  JobManager.cpp  JobManager.h  JpgStreamWriter.h  LegacyRun.cpp  LegacyRun.h  MosaicEngine.cpp  MosaicEngine.h  MosaicService.cpp  MosaicService.h  PngBatchWriter.h  (+8 more)
docs/: API.md  ENCYCLOPEDIA.md  RELEASE_CHECKLIST.md
docs/releases/: v1.13.7.md  v1.13.8.md
normalized_360/features/: 000000.hist  000000.tiny  000001.hist  000001.tiny  000002.hist  000002.tiny  000003.hist  000003.tiny  000004.hist  000004.tiny  000005.hist  000005.tiny  000006.hist  000006.tiny  000007.hist  000007.tiny  000008.hist  000008.tiny  000009.hist  000009.tiny  000010.hist  000010.tiny  000011.hist  000011.tiny  000012.hist  000012.tiny  000013.hist  000013.tiny  000014.hist  000014.tiny  000015.hist  000015.tiny  000016.hist  000016.tiny  000017.hist  000017.tiny  000018.hist  000018.tiny  000019.hist  000019.tiny  (+91361 more)
output/10_analysis/: worst_report.txt
release_pkg/: ENCYCLOPEDIA.md  README.md
scripts/: release.ps1  verify-release-asset.ps1
src/: main.cpp  server.cpp
tests/: regression.ps1  test_core.cpp  test_regression.cpp  webui_smoke.ps1
tools/command-builder/: index.html
